src/test/ui/llvm-asm/issue-69092.stderr
error: expected string
  --> $DIR/issue-69092.rs:11:14
   |
LL |     unsafe { llvm_asm!(".ascii \"Xen\0\""); }
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:9
   |
LL |     .ascii "Xen
   |            ^

error: aborting due to previous error

